fixes a bug which was not making the app compile

--- a/src/app/dashboard/admin/admin.component.html
+++ b/src/app/dashboard/admin/admin.component.html
@@ -7,7 +7,7 @@
 <mat-tab-group>
   <mat-tab label="Show all theaters">
     <ng-template matTabContent>
-      <span [innerHtml]="myTemplate">{{ showAllTheaters() }}</span>
+      <app-home></app-home>
     </ng-template>
   </mat-tab>
   <mat-tab label="Add new theater"> Content 2 </mat-tab>
